feat(): adiciona navbar

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -1,3 +1,32 @@
-<mat-toolbar class="header" color='primary'>
-  <span>Usuários</span>
-</mat-toolbar> 
+<mat-toolbar class="header" color="primary">
+  <mat-toolbar-row>
+    <button mat-icon-button (click)="onToggleSideNav()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1>{{title}}</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-sidenav-container (backdropClick)="onToggleSideNav()">
+  <mat-sidenav #sidenav class="sidenav" (keydown.escape)="onToggleSideNav()">
+    <mat-nav-list class="nav-list">
+
+      <a matTooltip="Usuários" class="nav-item" mat-list-item [routerLink]="'/users'" (click)="title = 'Usuários';sidenav.toggle()">
+        <mat-icon>person</mat-icon>
+        <span class="text">Usuários</span>
+      </a>
+
+      <a matTooltip="Criar usuário" class="nav-item" mat-list-item [routerLink]="'/users/create'"
+        (click)="title = 'Usuários > Criar';sidenav.toggle()">
+        <mat-icon>person_add</mat-icon>
+        <span class="text">Criar usuário</span>
+      </a>
+
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="body">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
