--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -1,4 +1,49 @@
 .header {
-    position: fixed;
     height: 50px;
+}
+
+.title {
+    padding: 10px;
+}
+
+.example-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.body {
+    height: calc(100vh - 65px);
+}
+
+.sidenav {
+    background-color: #3f51b5;
+    width: 20%;
+    height: calc(100vh - 65px);
+    padding-left: 4px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, .12);
+}
+
+.nav-item {
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, .12);
+    color: white;
+    padding: 2px !important;
+    width: 97% !important;
+}
+
+.text {
+    padding-left: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.nav-list {
+    width: 99%;
 }
