--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="body">
+<!-- <div class="body">
     <router-outlet></router-outlet>
-</div>
+</div> -->
 <!-- <app-footer></app-footer> -->
