--- a/client/src/app/features/login/login.component.html
+++ b/client/src/app/features/login/login.component.html
@@ -38,7 +38,7 @@
 
                 <tr>
                     <td>
-                        <a mat-flat-button class="buttons link-button">Esqueci minha senha</a>
+                        <a mat-flat-button class="buttons link-button" (click)="onRecoveryPass()">Esqueci minha senha</a>
                         <a mat-flat-button class="buttons link-button">Registrar-se</a>
                     </td>
                 </tr>
