--- a/client/src/app/features/settings/settings.component.scss
+++ b/client/src/app/features/settings/settings.component.scss
@@ -11,7 +11,7 @@
 
 .tr-line {
     width: 100%;
-    height: 120px;
+    height: 140px;
     padding: 15px;
     border-width: 1px;
     border-style: solid;
@@ -37,3 +37,13 @@
     padding-top: 1px;
     opacity: 0.7;
 }
+
+.buttons {
+    float: right;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #3f51b5;
+    background-color: #3f51b5;
+    color: white;
+}
+
