--- a/client/src/app/features/recovery-pass/recovery-pass.component.scss
+++ b/client/src/app/features/recovery-pass/recovery-pass.component.scss
@@ -14,8 +14,8 @@
     bottom: 0;
     left: 0;
     position: absolute;
-    width: 30%;
-    height: 30%;
+    width: 40%;
+    height: 50%;
     background-color: white;
     border-width: 2px;
     border-style: solid;
@@ -39,7 +39,7 @@
 }
 
 .buttons {
-    width: 100%;
+    width: 30%;
 }
 
 .primary-button {
@@ -54,4 +54,14 @@
 .link-button {
     background-color: transparent;
     color: #3f51b5;
+}
+
+.vertica-stepper {
+    background-color: white;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #3f51b5;
+    border-radius: 25px;
+    width: 100%;
+    height: 100%;
 }
