feat(): adiciona odata

--- a/client/src/app/shared/grid/grid.component.html
+++ b/client/src/app/shared/grid/grid.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="!isLoading" class="container">
     <table class="table table--header" cellspacing="0">
         <tr>
             <td width="50%">
