--- a/client/src/app/shared/grid/grid.component.scss
+++ b/client/src/app/shared/grid/grid.component.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 90%;
     max-height: 90%;
-  } 
+  }
 }
 
 table.mat-table {
@@ -15,8 +15,8 @@ table.mat-table {
   overflow: scroll;
 }
 
-.table-content { 
-  height: calc(100vh - 183px); 
+.table-content {
+  height: calc(100vh - 183px);
   overflow: auto;
 }
 
@@ -79,4 +79,9 @@ table.mat-table {
 
 tr.mat-header-row {
   height: 48px;
+}
+
+.disabled {
+  opacity: 0.3;
+  pointer-events: none;
 }
