--- a/client/src/app/features/user/user-add/user-add.component.html
+++ b/client/src/app/features/user/user-add/user-add.component.html
@@ -59,6 +59,6 @@
         </tr>
     </table>
 
-    <app-save-buttons [form]="form" (onSaveClick)="onSave()" (onSaveAndCreateClick)="onSaveAndCreate()">
+    <app-save-buttons [showSaveAndCreate]="true" [form]="form" (onSaveClick)="onSave()" (onSaveAndCreateClick)="onSaveAndCreate()">
     </app-save-buttons>
 </form>
