--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -79,3 +79,11 @@
         padding-left: 3px;
     }
 }
+
+.expansive-panel {
+    background-color: transparent;
+}
+
+.expansive-header {
+    padding-left: 1px;
+}
