--- a/client/src/app/features/settings/settings.component.scss
+++ b/client/src/app/features/settings/settings.component.scss
@@ -17,6 +17,7 @@
     border-style: solid;
     border-color: #3f51b5;
     border-radius: 25px;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 767px) {
