--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -27,7 +27,7 @@
         <span class="text">Usuários</span>
       </a>
 
-      <a matTooltip="Usuários do sistema" class="nav-item" mat-list-item [routerLink]="'/user-systems'"
+      <a *ngIf="hasSystemUserPermission" matTooltip="Usuários do sistema" class="nav-item" mat-list-item [routerLink]="'/system-users'"
         (click)="onClick('Usuários do sistema', sidenav)">
         <mat-icon>manage_accounts</mat-icon>
         <span class="text">Usuários do sistema</span>
